# hyperbolic-fully-connected

./: .gitignore  CLAUDE.md  README.md  TODOS.md  hyperplane_distance_results_no_relu.txt  my_network.ipynb  pyproject.toml
.claude/: settings.local.json
FGG-LNN/: .gitignore  README.md  TODOS.md  pyproject.toml  test copy.ipynb  test.ipynb
FGG-LNN/cifar_exp/: adversarial_eval.py  attack.py  cifar10_euc.yaml  cifar10_ours.yaml  cifar10_theirs.yaml  final_runs.yaml  final_runs_2.yaml  lastsweep.yaml  main.py  ood.py  rerun_crashed.sh  submit_cifar100_euc.sh  submit_cifar10_euc.sh  submit_cifar10_ours.sh  submit_cifar10_theirs.sh  submit_finalruns.sh  submit_finalruns_2.sh  submit_lastsweep.sh  submit_sweep.sh  submit_sweep_noweightnorm.sh  submit_sweep_weightnorm.sh  sweep_config.yaml  sweep_noweightnorm.yaml  sweep_weightnorm.yaml
FGG-LNN/exp1/: runtime_results.csv
FGG-LNN/exp2/: hyperparam_search.py  hyperparameters.txt  train_from_features.py
FGG-LNN/genome_exp/: __init__.py  main.py  model.py  submit_genomesweep.sh  sweep_config.yaml  sweep_grid.yaml  sweep_per_dataset.yaml
FGG-LNN/layers/: LBatchNorm.py  LBatchNormNew.py  LBatchNormTheirs.py  LConv.py  LConv1d.py  bdeir.py  (+7 more)
cifar_exp/: main.py  main_old.py  model.py  my_model.py  ood.py  run_sweep.py  submit.sh  submit_sweep.sh  sweep_config.yaml  train.py
exp1/: layer_runtimes.py
exp2/: hyperparam_search.py  mlr_layers.py  preprocess_features.py  results.csv  train_from_features.py  train_multi_run.py
jobs/: exp1.sh  exp2_hyperparameter_search.sh  exp2_hyperparameter_search_aux.sh  exp2_preprocess_features.sh  exp2_train.sh  exp2_train_multiple_runs.sh
layers/: LBatchNorm.py  LConv.py  LLinear.py  LProjection.py  LResBlock.py  LResNet.py  __init__.py  bdeir.py  chen.py  lorentz.py  lorentz_fc.py  poincare.py  residual.py
runtime_exp/: layer_runtimes.py  my_plot.py  my_runtimes.py  plot_results.py
toy_exp/: convergence_test_chen.py  convergence_test_poincare.py  convergence_test_ric.py  toy_exp.py
(+21 files in other folders)
