[project]
name = "hyperbolic-fully-connected"
version = "0.1.0"
authors = [
    { name = "ricardo-chavez-torres", email = "chaveztorresricardo@gmail.com" }
]
requires-python = ">=3.12"
# This list is what uv sync will install
dependencies = [
    # For PyTorch
    "torch",
    "torchvision",
    # Your other packages
    "lightning",
    "wandb",
    "hypll",
    # Your Git dependency (using PEP 508 syntax)
    "geoopt @ git+https://github.com/geoopt/geoopt.git",
    "scikit-learn>=1.7.2",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "einops>=0.8.1",
    "nltk>=3.9.2",
    "matplotlib>=3.10.7",
    "openood",
    "numpy>=2.3.4",
]

[project.optional-dependencies]
# It's good practice to put dev tools like notebook here
dev = [
    "notebook"
]

[tool.uv.pip]
# This adds the special PyTorch index.
# uv will search PyPI *and* this URL.
extra-index-url = [
    "https://download.pytorch.org/whl/cu126"
]

[tool.uv.sources]
openood = { git = "https://github.com/Jingkang50/OpenOOD" }

[tool.setuptools]
packages = ["layers"]

[tool.uv.extra-build-dependencies]
libmr = ["numpy", "cython"]